feat: Upgrade Spring to 3.0.13 Migrate to Spring Boot 3.0.13