@@ -14,11 +14,9 @@ import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
 
-/**
- * Extension of the generated UserService API client to adapt the handling of parameter values.
- */
-public class TenantServiceApiClient extends
-    de.caritas.cob.uploadservice.tenantservice.generated.ApiClient {
+/** Extension of the generated UserService API client to adapt the handling of parameter values. */
+public class TenantServiceApiClient
+    extends de.caritas.cob.uploadservice.tenantservice.generated.ApiClient {
 
   private static final String FILTER_NAME = "filter";
 
@@ -31,8 +29,8 @@ public class TenantServiceApiClient extends
    * which are not {@link Collection} for filter query params.
    *
    * @param collectionFormat The format to convert to
-   * @param name             The name of the parameter
-   * @param value            The parameter's value
+   * @param name The name of the parameter
+   * @param value The parameter's value
    * @return a Map containing non-null String value(s) of the input parameter
    */
   @Override
@@ -54,8 +52,9 @@ public class TenantServiceApiClient extends
     MultiValueMap<String, String> paramMap = new LinkedMultiValueMap<>();
 
     try {
-      Arrays.asList(Introspector.getBeanInfo(queryValue.getClass(), Object.class)
-          .getPropertyDescriptors())
+      Arrays.asList(
+              Introspector.getBeanInfo(queryValue.getClass(), Object.class)
+                  .getPropertyDescriptors())
           .stream()
           .filter(descriptor -> nonNull(descriptor.getReadMethod()))
           .forEach(descriptor -> setMethodKeyValuePairs(queryValue, paramMap, descriptor));
@@ -63,13 +62,12 @@ public class TenantServiceApiClient extends
 
     } catch (IntrospectionException exception) {
       throw new InternalServerErrorException(
-          String.format("Could not obtain method properties of %s", queryValue.toString()),
-          exception);
+          "Could not obtain method properties of %s".formatted(queryValue.toString()), exception);
     }
   }
 
-  private void setMethodKeyValuePairs(Object queryValue, MultiValueMap<String, String> map,
-      PropertyDescriptor descriptor) {
+  private void setMethodKeyValuePairs(
+      Object queryValue, MultiValueMap<String, String> map, PropertyDescriptor descriptor) {
     try {
       Object value = descriptor.getReadMethod().invoke(queryValue);
       if (nonNull(value)) {
@@ -77,7 +75,7 @@ public class TenantServiceApiClient extends
       }
     } catch (Exception exception) {
       throw new InternalServerErrorException(
-          String.format("Could not obtain method key value pairs of %s", queryValue.toString()),
+          "Could not obtain method key value pairs of %s".formatted(queryValue.toString()),
           exception);
     }
   }
